--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,8 @@ sudo: false
 language: ruby
 rvm:
   - 2.4.0
-before_install: gem install bundler -v 1.13.7
+  - 2.2.3
+  - 2.1.7
+  - 2.0.0
+before_install:
+  - gem install bundler -v 1.13.7
